cp project/force-app/main/default/objects/Lead_Registration__c/Lead_Registration__c.object-meta.xml
<CustomObject>
    <description>Channel partner lead registration and exclusivity ownership protection</description>
    <label>Lead Registration</label>
    <nameField>
        <displayFormat>LR-{000000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>