cp project/force-app/main/default/objects/Lead_Registration__c/fields/Duplicate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Lead Match</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Duplicate_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>