cp project/force-app/main/default/objects/Lead_Registration__c/fields/Duplicate_Registration__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conflicting Registration</label>
    <referenceTo>Lead_Registration__c</referenceTo>
    <relationshipName>Collision_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>