cp project/force-app/main/default/objects/Lead_Registration__c/fields/Expected_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Purchase_Date__c</fullName>
    <label>Expected Purchase Date</label>
    <type>Date</type>
</CustomField>