cp project/force-app/main/default/objects/Lead_Registration__c/fields/Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Status__c</fullName>
    <label>Ownership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Protected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Disputed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>