cp project/force-app/main/default/objects/Lead_Registration__c/fields/Protection_Days_Granted__c.field-meta.xml
<CustomField>
    <fullName>Protection_Days_Granted__c</fullName>
    <label>Protection Days Granted</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>