cp project/force-app/main/default/objects/Lead_Registration__c/fields/Protection_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Protection_End_Date__c</fullName>
    <label>Protection End Date</label>
    <type>Date</type>
</CustomField>