cp project/force-app/main/default/objects/Lead_Registration__c/fields/Protection_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Protection_Start_Date__c</fullName>
    <label>Protection Start Date</label>
    <type>Date</type>
</CustomField>