cp project/force-app/main/default/objects/Lead_Registration__c/validationRules/Protection_End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Protection_End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Protection_Start_Date__c)), NOT(ISBLANK(Protection_End_Date__c)), Protection_End_Date__c &lt; Protection_Start_Date__c)</errorConditionFormula>
    <errorMessage>Protection End Date must be on or after Protection Start Date.</errorMessage>
</ValidationRule>