cp project/force-app/main/default/objects/Lead_Registration__c/validationRules/Rejection_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Requires_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Registration_Status__c, "Rejected"), ISBLANK(Rejection_Reason__c))</errorConditionFormula>
    <errorMessage>Rejection reason is required when rejecting a registration.</errorMessage>
</ValidationRule>